--- a/templates/inc/_header.html
+++ b/templates/inc/_header.html
@@ -1,6 +1,6 @@
 <header>
     <div class="part">
-        <a href="/"><img src="{{ url_for('static', filename='imgs/logo-mini-data.png') }}" width="65px" height="100%" alt="" class="logo"></a><div class="title">Ресторан доставки</div>
+        <a href="{{ url_for('menu') }}"><img src="{{ url_for('static', filename='imgs/logo-mini-data.png') }}" width="65px" height="100%" alt="" class="logo"></a><div class="title">Ресторан доставки</div>
     </div>
 
     {% if not hide_account_menu %}
