--- a/templates/sing-in.html
+++ b/templates/sing-in.html
@@ -5,13 +5,13 @@
         <h1>Вход</h1>
         <form method="post" action="{{ url_for('user_sign_in') }}">
 
-            <input type="tel" placeholder="Телефон +380 YY XXX XX XX" name="phone" pattern="\+380\d{2}\d{3}\d{2}\d{2}" title="Введите номер в формате: +380 YY XXX XX XX">
-            <input type="password" placeholder="Введите пароль" name="password1">
+            <input type="tel" placeholder="Телефон +380 YY XXX XX XX" name="phone" {% if phone %}value="{{ phone }}"{% endif %}>
+            <input type="password" placeholder="Введите пароль" name="password1" {% if password1 %}value="{{ password1 }}"{% endif %}>
 
             <button type="submit">Войти</button>
         </form>
         <div class="aunt-actions">
-            <a href="">Забыли пароль?</a>
+            <a href="{{ url_for('user_restore') }}">Забыли пароль?</a>
             <a href="{{ url_for('user_register') }}">Нет аккаунта?</a>
         </div>
 
