--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,7 @@ html {
 body {
     color: var(--main-color);
     background-color: var(--main-bg-color);
-    min-width: 316px;
+    min-width: 357px;
     min-height: 100svh;
     padding: 0;
     margin: 0;
@@ -42,6 +42,7 @@ header .part {
     justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
+    transition: 0.3s;
 }
 
 header .part.search-and-login {
@@ -75,13 +76,18 @@ header .log-in-btn:hover {
     background-color: var(--tertiary-bg-color-hover);
 }
 
-
+h1,
+h2{
+    text-align: center;
+}
 
 
 main {
-    width: 100%;
-    max-width: 100%;
+    width: calc(100% - 20px);
+    max-width: 600px;
+    margin: 0 auto;
     height: 100%;
+    padding: 10px;
 
     display: flex;
     flex: 5;
@@ -135,7 +141,7 @@ main nav ul.nav li{
     user-select: none;
     transition: 0.05s;
 }
-main nav ul.nav li::first-child{
+main nav ul.nav li:first-child{
     margin-top: 15px;
 }
 main nav ul.nav li:hover{
@@ -163,37 +169,34 @@ section.feed a {
 
 article.category-card {
     max-width: 666px;
-    height: 160px;
-    overflow: hidden;
     display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
 
-    padding: 0 0  0 10px;
     border-radius: 20px;
     border-color: rgba(72, 95, 110, 0.07);
     border-style: outset;
     margin: 0 20px 10px 20px;
+    padding: 10px 0;
+    user-select: none;
 
+}
+article.category-card img {
+    max-width: calc(100% - 20px);
+    max-height: 160px;
+    border-radius: 10px;
+    margin-right: 10px;
 }
 article.category-card .title {
-    width: 50%;
+    max-width: 100%;
     text-align: center;
     font-size: large;
-    padding: 10px;
-    margin-right: 22px;
+    padding: 10px 0;
+    margin-left: 10px;
 }
 
-article.category-card .image-and-arrow {
-    width: 50%;
-    display: flex;
-    justify-content: end;
-    align-items: end;
-    display: inline-block;
 
-}
-article.category-card .image-and-arrow img {
-    height: 100%;
-    width: auto;
-}
 
 
 
@@ -401,8 +404,115 @@ section.auth form button[type="submit"]:hover {
 
 
 
+.user-address,
+.user-restore,
+.user-profile {
+    width: 100%;
+    max-width: calc(100%- 20px);
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 
-@media only screen and (max-width: 640px) {
+.user-address .data-form,
+.user-restore .data-form,
+.user-profile .data-form {
+    max-width: calc(100%- 20px);
+    display: flex;
+    flex-direction: column;
+    border: 5px solid var(--secondary-bg-color);
+    border-radius: 20px;
+    padding: 15px;
+    transition: 0.2s;
+}
+.user-address .data-form label,
+.user-restore .data-form label,
+.user-profile .data-form label{
+    padding: 2px 10px;
+}
+.user-address .data-form input,
+.user-restore .data-form input,
+.user-profile .data-form input{
+    padding: 5px 10px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    border: 2px solid var(--secondary-bg-color);
+}
+.user-address .data-form .profile-password,
+.user-restore .data-form .profile-password,
+.user-profile .data-form .profile-password,
+.user-profile .data-form .profile-telegram_id{
+    display: none;
+}
+.user-address .data-form button,
+.user-restore .data-form button,
+.user-profile .data-form button {
+    border: 2px solid var(--tertiary-bg-color);
+    background-color: var(--tertiary-bg-color);
+    color: var(--main-bg-color);
+    padding: 5px 0;
+    border-radius: 10px;
+    margin-top: 5px;
+}
+.user-address .data-form button:hover,
+.user-restore .data-form button:hover,
+.user-profile .data-form button:hover {
+    background-color: var(--tertiary-bg-color-hover);
+}
+
+
+
+.user-address ul {
+    list-style: none;
+    padding: 0;
+}
+.user-address ul.address-list{
+    display: flex;
+    flex-direction: column;
+    border: 5px solid var(--secondary-bg-color);
+    margin-bottom: 10px;
+    padding:  5px 10px;
+    border-radius: 20px;
+
+}
+.user-address ul.address-list ul {
+    border: 2px solid var(--secondary-bg-color);
+    border-radius: 10px;
+    margin: 5px 0;
+}
+.user-address ul.address-list ul li{
+    display: flex;
+    padding: 2px 10px;
+    border-radius: 10px;
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 880px) {
     header .part .logo {
         margin-top: 24px;
     }
@@ -430,15 +540,40 @@ section.auth form button[type="submit"]:hover {
         margin: 0;
     }
 
+
+
     article.category-card {
-        height: 100px;
+        max-width: 666px;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        border-radius: 20px;
+        border-color: rgba(72, 95, 110, 0.07);
+        border-style: outset;
+        margin: 0 20px 10px 20px;
+        padding: 10px 0;
+
+    }
+    article.category-card img {
+        max-width: 100%;
+        border-radius: 10px;
+        padding: 0;
+        margin: 0;
+    }
+    article.category-card .title {
+        max-width: 100%;
+        text-align: center;
+        font-size: large;
+        padding: 10px 0;
     }
 
 
-
-
-
-
+    .user-profile .data-form {
+        max-width: calc(100%- 20px);
+    }
 }
 @media only screen and (max-width: 367px) {
 
@@ -447,8 +582,3 @@ section.auth form button[type="submit"]:hover {
         font-size: 16px;
     }
 }
-
-
-
-
-
