--- a/templates/sing-in.html
+++ b/templates/sing-in.html
@@ -3,7 +3,7 @@
 {% block content %}
     <section class="auth">
         <h1>Вход</h1>
-        <form method="post" action="{{ url_for('user_sign_in') }}">
+        <form method="post" action="{{ url_for('user.user_login') }}">
 
             <input type="tel" placeholder="Телефон +380 YY XXX XX XX" name="phone" {% if phone %}value="{{ phone }}"{% endif %}>
             <input type="password" placeholder="Введите пароль" name="password1" {% if password1 %}value="{{ password1 }}"{% endif %}>
@@ -11,8 +11,8 @@
             <button type="submit">Войти</button>
         </form>
         <div class="aunt-actions">
-            <a href="{{ url_for('user_restore') }}">Забыли пароль?</a>
-            <a href="{{ url_for('user_register') }}">Нет аккаунта?</a>
+            <a href="{{ url_for('user.user_restore') }}">Забыли пароль?</a>
+            <a href="{{ url_for('user.user_register') }}">Нет аккаунта?</a>
         </div>
 
         {% if get_flashed_messages() %}
