--- a/templates/inc/_sticky-search.html
+++ b/templates/inc/_sticky-search.html
@@ -1,5 +1,5 @@
 <div class="sticky">
-    <form class="main-search" method="get" action="{{ url_for('menu_search') }}">
+    <form class="main-search" method="get" action="{{ url_for('menu.menu_search') }}">
         <input placeholder="Искать в Вилки Палки" name="search_query"  {% if search_query %}value="{{ search_query }}"{% endif %}>
         <button type="submit" class="magnifying-glass">🔍</button>
     </form>
