--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,9 @@
     <title>{{ title }}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='imgs/favicon.png') }}" type="image/x-icon">
+    <style>
+        {{ css }}
+    </style>
 </head>
 
 <body>
