--- a/templates/menu.html
+++ b/templates/menu.html
@@ -5,5 +5,7 @@
     <section class="content">
         {% include 'inc/_nav.html' %}
         {% include 'inc/_feed.html' %}
+        {% include 'inc/_cart-btn.html' %}
     </section>
+
 {% endblock %}
