--- a/templates/inc/_feed.html
+++ b/templates/inc/_feed.html
@@ -7,6 +7,7 @@
             <article class="category-card">
                 <img src="{{ product.Dish.photo }}" alt="">
                 <div class="title">{{ product.Dish.name }}</div>
+                {% include 'inc/_product_btns.html' %}
             </article>
         </a>
     {% endfor %}
