--- a/templates/inc/_product_btns.html
+++ b/templates/inc/_product_btns.html
@@ -5,6 +5,6 @@
     </form>
 
     <form method="post" action="{{ url_for('cart.cart_index', product_id=product.Dish.id, action='remove') }}">
-        <button type="submit">-</button>
+        <button type="submit">—</button>
     </form>
 </div>
