--- a/blueprints/cart/templates/cart/cart.html
+++ b/blueprints/cart/templates/cart/cart.html
@@ -22,6 +22,42 @@
                     </a>
                 {% endfor %}
             </ul>
+
+            {% if user_address_list %}
+                <h2>Выберите адрес доставки</h2>
+                <form method="post" action="{{ url_for('cart.cart_order') }}" class="make-order">
+                    <select name="address_id" required>
+                        {% for address in user_address_list %}
+                            <option value="{{ address.id }}">
+                                <div>{{ address.city }},</div>
+                                <div>{{ address.street }}</div>
+                                <div>{{ address.house }}</div>
+
+                                {% if address.apartment %}
+                                    <div>| Квартира: {{ address.apartment }}</div>
+                                {% endif %}
+
+                                {% if address.entrance %}
+                                    <div>| Подъезд: {{ address.entrance }}</div>
+                                {% endif %}
+
+                                {% if address.floor %}
+                                    <div>| Этаж: {{ address.floor }}</div>
+                                {% endif %}
+
+                            </option>
+                        {% endfor %}
+                    </select>
+                    <textarea name="comment" id="comment" placeholder="Комментарий к заказу"></textarea>
+                    <button type="submit" class="submit">Сделать заказ!</button>
+                </form>
+
+            {% else %}
+                <h2>У вас нет адреса доставки</h2>
+                <a href="{{ url_for('user.user_address_list', next=url_for('cart.cart_index')) }}" class="submit">Добавить</a>
+            {% endif %}
+
+
         {% else %}
             <h3 style="text-align: center;">пустая</h3>
             <a href="{{ url_for('menu.menu_index') }}" style="text-align: center;">К покупкам!</a>
